--- a/chuteDelay/Resources/chuteDelay.cfg
+++ b/chuteDelay/Resources/chuteDelay.cfg
@@ -7,6 +7,7 @@
 }
 @PART[*]:HAS[@MODULE[ChuteDelay]]
 {
+	// Remove old events
 	@MODULE[ChuteDelay]:HAS[@EVENTS[ToggleDelayUpdateUiString]]
 	{
 		-@EVENTS[ToggleDelayUpdateUiString]{}
@@ -14,5 +15,12 @@
 	@MODULE[ChuteDelay]:HAS[@EVENTS[ToggleDelay]]
 	{
 		-@EVENTS[ToggleDelay]{}
+	}
+	// add resource
+	RESOURCE
+	{
+		name = ElectricCharge
+    	amount = 10
+    	maxAmount = 10
 	}
 }
